@@ -77,4 +77,4 @@ rsyncdirs=tox.ini pytest.py _pytest testing
 python_files=test_*.py *_test.py
 python_classes=Test Acceptance
 python_functions=test
-pep8ignore = E401
+pep8ignore = E401 E225 E261 E128 E124
