@@ -1,6 +1,8 @@
 Changes between 2.2.4 and 2.2.5.dev
 -----------------------------------
 
+- fix issue160: a failing setup of an xfail-marked tests should
+  be reported as xfail (not xpass)
 - fix issue128: show captured output when capsys/capfd are used
 - pluginmanager.register(...) now raises ValueError if the
   plugin has been already registered or the name is taken
